fix project details page alignment

--- a/src/components/Main.module.css
+++ b/src/components/Main.module.css
@@ -22,7 +22,13 @@
 
 @media screen and (max-width: 736px) {
   .main > .panel {
-    padding: 2em 1.5em 1.5em 1.5em;
+    padding: 0.75rem;
+  }
+}
+
+@media screen and (max-width: 380px) {
+  .main > .panel {
+    padding: 0.45rem;
   }
 }
 
